# quadruped-gym

./: .bumpversion.cfg  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.txt  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
docs/: api.md  installation.md  usage.md
notebooks/: inspect_custom_a1_urdf.ipynb  inspect_gym_env.ipynb  inspect_simulator.ipynb  inspect_wbc.ipynb
quadruped_gym/agents/linear_controller/: __init__.py  controller.py
quadruped_gym/agents/whole_body_controller/: com_velocity_estimator.py  foot_stepper.py  gait_generator.py  leg_controller.py  locomotion_controller.py  openloop_gait_generator.py  qp_torque_optimizer.py  raibert_swing_leg_controller.py  static_gait_controller.py  torque_stance_leg_controller.py
quadruped_gym/core/: controller.py  filter.py  functional.py  gym_utils.py  simulator.py  types.py
quadruped_gym/examples/: 01_basic_simulator.py  02_mocap_simulator.py  03_random_gym.py  gym_env.py  whole_body_controller.py
quadruped_gym/gym/: __init__.py  env_builder.py  quadruped_gym_env.py
quadruped_gym/gym/a1_pybullet/: env.py
quadruped_gym/gym/sensors/: environment_sensors.py  robot_sensors.py  sensor.py  sensor_wrappers.py  space_utils.py
quadruped_gym/gym/tasks/: forward_task_pos.py
quadruped_gym/gym/wrappers/: wrappers.py
quadruped_gym/quadruped/a1_pybullet/: __init__.py  actuator.py  perceptor.py  robot.py  simulator.py
quadruped_gym/quadruped/data/: __init__.py  plane_implicit.urdf
quadruped_gym/quadruped/data/a1/meshes/: calf.stl:Zone.Identifier
quadruped_gym/quadruped/data/a1/urdf/: a1_black.urdf
tests/: __init__.py  test_gym_env.py  test_simulator.py
