[tool.poetry]
name = "quadruped-gym"
version = "0.1.0"
homepage = "https://github.com/dtch1997/quadruped-gym"
description = "OpenAI gym environment for training quadruped legged robots."
authors = ["Daniel CH Tan <dtch1997@alumni.stanford.edu>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "quadruped_gym" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pybullet = "^3.2.1"
numpy = ">=1.17,<1.21"
scipy = "^1.7.3"
numba = "^0.54.1"
gym = ">=0.17,<0.20"
quadprog = "^0.1.11"
gin = "^0.1.6"
gin-config = "^0.5.0"
stable-baselines3 = "^1.4.0"


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pre-commit = "^2.16.0"
black = "^21.12b0"
flake8 = "^4.0.1"
ipykernel = "^6.7.0"
matplotlib = "^3.5.1"
notebook = "^6.4.7"
jupyter = "^1.0.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
# skip_glob = docs/conf.py

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
